# opensecret

./: .env.sample  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  entrypoint.sh  flake.nix  justfile  pcrDev.json  pcrDevHistory.json  pcrProd.json  pcrProdHistory.json  pcr_sign.js  pcr_sign.py  pcr_verify.js  rust-toolchain.toml  update_continuum_url.sh
.github/workflows/: build.yml  flakehub-publish-rolling.yml  rust.yml
docs/: PCR_VERIFICATION.md  nitro-deploy.md
migrations/2024-08-20-163446_users_table/: down.sql  up.sql
migrations/2024-08-26-211803_user_kv_table/: down.sql  up.sql
migrations/2024-09-16-172351_enclave_secrets/: down.sql  up.sql
migrations/2024-09-27-181732_user_created_updated/: down.sql  up.sql
migrations/2024-09-30-200112_email_verification/: down.sql  up.sql
migrations/2024-10-14-200004_password_reset/: up.sql
migrations/2024-10-17-200717_cascade_deletes/: down.sql  up.sql
migrations/2024-10-17-200718_oauth/: down.sql  up.sql
migrations/2024-10-26-175809_token_usage/: down.sql  up.sql
migrations/2024-12-02-194751_guest_user/: down.sql  up.sql
migrations/2025-02-09-223440_email_citext/: down.sql  up.sql
migrations/2025-02-10-223225_third_party_devs/: down.sql  up.sql
migrations/2025-02-24-192716_platform_email_verification/: down.sql  up.sql
migrations/2025-03-05-224105_platform_password_reset/: down.sql  up.sql
migrations/2025-03-07-190516_platform_invite_codes/: down.sql  up.sql
migrations/2025-05-06-145011_account_deletion/: down.sql  up.sql
migrations/2025-08-11-182103_fix_user_email_project_uniqueness/: down.sql  up.sql
src/: apple_signin.rs  aws_credentials.rs  billing.rs  db.rs  email.rs  encrypt.rs  jwt.rs  kv.rs  main.rs  message_signing.rs  migrations.rs  oauth.rs  private_key.rs  proxy_config.rs  sqs.rs  web.rs
src/models/: account_deletion.rs  email_verification.rs  enclave_secrets.rs  invite_codes.rs  mod.rs  oauth.rs  org_memberships.rs  org_project_secrets.rs  org_projects.rs  orgs.rs  password_reset.rs  platform_email_verification.rs  platform_invite_codes.rs  platform_password_reset.rs  platform_users.rs  project_settings.rs  schema.rs  token_usage.rs  user_kv.rs  users.rs
src/web/: attestation_routes.rs  documents.rs  encryption_middleware.rs  health_routes.rs  login_routes.rs  mod.rs  oauth_routes.rs  openai.rs  protected_routes.rs
src/web/platform/: common.rs  invite_routes.rs  login_routes.rs  me_routes.rs  membership_routes.rs  mod.rs  org_routes.rs  project_routes.rs  validation.rs
tinfoil-proxy/: .gitignore  Dockerfile  Dockerfile.build  README.md  build.sh  go.mod  go.sum  main.go  pyproject.toml  setup.sh  tinfoil_proxy.py
