[package]
name = "opensecret"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-macros = { version = "0.4.1" }
password-auth = "1.0.0"
bip39 = { version = "2.0.0" }
bip85_extended = "1.1.0"
bitcoin = { version = "0.32.2", default-features = false, features = ["std", "serde", "secp-recovery", "rand"] }
aws-nitro-enclaves-nsm-api = "0.3.0"
aws-smithy-runtime = "1.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors"] }
thiserror = "1.0.63"
async-trait = "0.1.81"
jsonwebtoken = "9.3.0"
jwt-compact = { version = "0.9.0-beta.1", features = ["es256k"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
aes-gcm = "0.10.1"
aes-siv = "0.7"
hmac = "0.12.1"
generic-array = "0.14"
cbc = "0.1.2"
secp256k1 = { version = "0.29.0", features = ["rand"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tokio-stream = "0.1"
bytes = "1.0"
sha2 = { version = "0.10", default-features = false }
hex = "0.4.3"
base64 = "0.22.1"
vsock = "0.5.1"
x25519-dalek = "2.0.1"
rand_core = "0.6"
serde_cbor = "0.11"
x509-parser = "0.15"
yasna = "0.5"
rcgen = { version = "0.13.1", features = ["crypto"] }
chacha20poly1305 = "0.10.1"
getrandom = "0.2.15"
url = "2.5.2"
bigdecimal = { version = "0.4.5", features = ["serde"] }
aws-config = "1.5.10"
aws-types = "1.3.3"
backoff = { version = "0.4.0", features = ["tokio"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.9.0"
lazy_static = "1.4.0"
subtle = "2.6.1"
