[package]
name = "opensecret"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
aws-nitro-enclaves-nsm-api = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors"] }
thiserror = "1.0.63"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
aes-gcm = "0.10.1"
aes-siv = "0.7"
generic-array = "0.14"
secp256k1 = { version = "0.29.0", features = ["rand"] }
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tokio-stream = "0.1"
sha2 = { version = "0.10", default-features = false }
hex = "0.4.3"
base64 = "0.22.1"
vsock = "0.5.1"
x25519-dalek = "2.0.1"
rand_core = "0.6"
serde_cbor = "0.11"
yasna = "0.5"
chacha20poly1305 = "0.10.1"
getrandom = "0.2.15"

