[tool.poetry]
name = "tinfoil-proxy"
version = "0.1.0"
description = "OpenAI-compatible proxy for Tinfoil"
authors = ["OpenSecret"]

[tool.poetry.dependencies]
python = "^3.12"
tinfoil = "^0.1.4"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic = "^2.0"
python-multipart = "^0.0.5"
aiohttp = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"